added comments to train notebook and moved functions to utils

--- a/train.ipynb
+++ b/train.ipynb
@@ -20,11 +20,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-22 21:49:58.373348: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2023-02-23 18:04:15.174782: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-02-22 21:50:00.600585: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/cuda-11.8/include:/usr/local/cuda-11.8/lib64:\n",
-      "2023-02-22 21:50:00.600754: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/cuda-11.8/include:/usr/local/cuda-11.8/lib64:\n",
-      "2023-02-22 21:50:00.600769: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+      "2023-02-23 18:04:16.216869: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/cuda-11.8/include:/usr/local/cuda-11.8/lib64:\n",
+      "2023-02-23 18:04:16.216962: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/cuda-11.8/include:/usr/local/cuda-11.8/lib64:\n",
+      "2023-02-23 18:04:16.216972: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
      ]
     }
    ],
@@ -32,12 +32,23 @@
     "import tensorflow as tf        \n",
     "from tensorflow_examples.models.pix2pix import pix2pix\n",
     "import numpy as np\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import clear_output\n",
     "\n",
     "import os\n",
     "import datetime\n",
-    "import pickle"
+    "import pickle\n",
+    "\n",
+    "from utils import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f443d39-fda7-4168-90bd-dbf686f006ce",
+   "metadata": {},
+   "source": [
+    "If a GPU is available, the function below configures its memory usage. "
    ]
   },
   {
@@ -59,24 +70,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-22 21:50:02.969862: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2023-02-23 18:04:17.508964: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-02-22 21:50:04.352698: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 1608 MB memory:  -> device: 0, name: NVIDIA GeForce GTX 750 Ti, pci bus id: 0000:02:00.0, compute capability: 5.0\n"
+      "2023-02-23 18:04:18.126357: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 1608 MB memory:  -> device: 0, name: NVIDIA GeForce GTX 750 Ti, pci bus id: 0000:02:00.0, compute capability: 5.0\n"
      ]
     }
    ],
    "source": [
-    "gpus = tf.config.list_physical_devices('GPU')\n",
-    "if gpus:\n",
-    "    try:\n",
-    "        # Currently, memory growth needs to be the same across GPUs\n",
-    "        for gpu in gpus:\n",
-    "            tf.config.experimental.set_memory_growth(gpu, True)\n",
-    "        logical_gpus = tf.config.experimental.list_logical_devices('GPU')\n",
-    "        print(len(gpus), \"Physical GPUs,\", len(logical_gpus), \"Logical GPUs\")\n",
-    "    except RuntimeError as e:\n",
-    "        # Memory growth must be set before GPUs have been initialized\n",
-    "        print(e)"
+    "configureGPU()"
    ]
   },
   {
@@ -101,21 +102,15 @@
     "IMAGE_HEIGHT = 224\n",
     "IMAGE_WIDTH = 224\n",
     "SEED = 123\n",
-    "N_CLASSES = 66\n",
-    "\n",
-    "def getDataset(path):\n",
-    "    return tf.keras.utils.image_dataset_from_directory(\n",
-    "                path,\n",
-    "                labels=None,\n",
-    "                color_mode='rgb',\n",
-    "                batch_size=BATCH_SIZE,\n",
-    "                image_size=(IMAGE_HEIGHT, IMAGE_WIDTH),\n",
-    "                shuffle=True,\n",
-    "                seed=SEED,\n",
-    "                validation_split=None,\n",
-    "                interpolation='bilinear',\n",
-    "                crop_to_aspect_ratio=True,\n",
-    "            )"
+    "N_CLASSES = 66"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ad1ab13-3bfe-4b9d-b4d6-f0bfbcafc803",
+   "metadata": {},
+   "source": [
+    "The data is loaded separately for images and instances."
    ]
   },
   {
@@ -136,8 +131,8 @@
     }
    ],
    "source": [
-    "train_x = getDataset(DATA_PATH + \"training/images\")\n",
-    "train_y = getDataset(DATA_PATH + \"training/instances\")"
+    "train_x = getDataset(DATA_PATH + \"training/images\", BATCH_SIZE, IMAGE_HEIGHT, IMAGE_WIDTH, SEED)\n",
+    "train_y = getDataset(DATA_PATH + \"training/instances\", BATCH_SIZE, IMAGE_HEIGHT, IMAGE_WIDTH, SEED)"
    ]
   },
   {
@@ -158,8 +153,16 @@
     }
    ],
    "source": [
-    "test_x = getDataset(DATA_PATH + \"validation/images\")\n",
-    "test_y = getDataset(DATA_PATH + \"validation/instances\")"
+    "test_x = getDataset(DATA_PATH + \"validation/images\", BATCH_SIZE, IMAGE_HEIGHT, IMAGE_WIDTH, SEED)\n",
+    "test_y = getDataset(DATA_PATH + \"validation/instances\", BATCH_SIZE, IMAGE_HEIGHT, IMAGE_WIDTH, SEED)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "181f2a87-d991-48c9-866f-b4fc34a54492",
+   "metadata": {},
+   "source": [
+    "Then it's merged into training and test datasets."
    ]
   },
   {
@@ -171,6 +174,14 @@
    "source": [
     "train_ds = tf.data.Dataset.zip((train_x, train_y))\n",
     "test_ds = tf.data.Dataset.zip((test_x, test_y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "909b7ad3-3269-41d9-a041-c06a82a17752",
+   "metadata": {},
+   "source": [
+    "## Example"
    ]
   },
   {
@@ -214,6 +225,22 @@
     "for images, masks in train_ds.take(1):\n",
     "    sample_image, sample_mask = images[0], masks[0]\n",
     "    displayExample([sample_image, sample_mask])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "191f5440-3c4e-4538-8af1-a73cbd121bc8",
+   "metadata": {},
+   "source": [
+    "## Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0f44757-8c1c-4126-a0ec-4459faab94c9",
+   "metadata": {},
+   "source": [
+    "The input images need to be normilized to range from 0 to 1 and the instance images have to be one-hot encoded pixelwise."
    ]
   },
   {
@@ -430,18 +457,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "a4071d0a-b9a5-4d92-8885-b38b0fd8e54a",
+   "cell_type": "markdown",
+   "id": "dce5e23c-2af5-487f-823a-b40b57fef780",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def create_mask(pred_mask):\n",
-    "    pred_mask = tf.math.argmax(pred_mask, axis=-1)\n",
-    "    pred_mask = pred_mask[..., tf.newaxis]\n",
-    "    if len(pred_mask.shape) > 3:\n",
-    "        pred_mask = pred_mask[0]\n",
-    "    return pred_mask"
+    "## Dispalying examples"
    ]
   },
   {
@@ -494,6 +514,14 @@
    ],
    "source": [
     "show_predictions(train_ds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "762be7da-f9db-4b1c-be04-ec8726308009",
+   "metadata": {},
+   "source": [
+    "## Callbacks"
    ]
   },
   {
@@ -1277,6 +1305,14 @@
     "\n",
     "with open('./histories/history.pickle', 'wb+') as file:\n",
     "    pickle.dump(model_history, file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44feb0cb-f5df-4be7-a269-94bfedbf9059",
+   "metadata": {},
+   "source": [
+    "## Statistics"
    ]
   },
   {
